# useful_structures_model_projects

deque/: CMakeLists.txt
deque/include/: deque.h
deque/src/: deque.c
list/: CMakeLists.txt
list/include/: list.h
list/src/: list.c
list_nodes/: CMakeLists.txt  main.c
list_nodes/include/: list.h
list_nodes/src/: list.c
model_cpp_project/: CMakeLists.txt
stack/: CMakeLists.txt
stack/include/: stack.h
stack/src/: stack.c
stack/tests/: main.c
